umap/static/umap/map.css
/* ... */
.leaflet-iconLayers-layerCell-plus:hover {
    background-color: var(--color-veryLightGray);
}

.leaflet-iconLayers:hover .leaflet-iconLayers-layerCell-plus {
    display: block;
}

.home-button {
    cursor: pointer;
    line-height: 0;
    border: 1px solid var(--color-darkBlue);
    border-radius: 50%;
    background-color: var(--background-color);
}

.home-button:hover {
    background-color: var(--color-lighterGray);
}

.umap-edit-enabled .home-button {
    display: none;
}



/* ***************** */
/*    Search panel   */
/* ***************** */
ul.photon-autocomplete {
    position: absolute;
    background-color: white;
    z-index: var(--zindex-autocomplete);
    display: none;
}

.photon-autocomplete li {
    min-height: 40px;
    line-height: 1em;
    padding-inline-start: 10px;
    overflow: hidden;
    white-space: nowrap;
    font-size: 1em;
    border-inline-start: 4px solid var(--color-veryLightGray);
}

.photon-autocomplete li strong {
    display: block;
    margin-top: 5px;
}

.photon-autocomplete button {
    margin: 0;
}

.photon-autocomplete button[type="button"]:hover {
    background-color: var(--color-darkCyan);
}

.photon-autocomplete button:hover i {
    /* TODO deal with this in icon.css  */
    background-image: url('./img/16-white.svg');
}

.photon-autocomplete li.on {
    border-inline-start: 4px solid var(--color-darkCyan);
    cursor: pointer;
    background-color: var(--color-lightCyan);
}

.photon-autocomplete li.photon-no-result {
    text-align: center;
    color: #666;
    font-size: 0.9em;
    line-height: 40px;
}

.photon-autocomplete .photon-feedback {
    display: block;
    text-align: end;
    font-size: 0.8em;
    padding: 3px;
    color: #999;
    border-top: 1px solid #eee;
}

.search-result-tools {
    float: inline-end;
    display: none;
}

.search-result-tools button[type="button"] {
    padding: var(--text-margin);
    background-color: var(--background-color);
}

.umap-edit-enabled .photon-autocomplete li.on .search-result-tools {
    display: flex;
    position: relative;
}



/* ***************************** */
/*    Share and download panel   */
/* ***************************** */
.downloads {
    columns: 4;
    margin-bottom: var(--box-margin);
}

.downloads li {
    height: 1.7em;
    padding: 0;
    text-align: start;
    vertical-align: bottom;
}

/* *********** */
/*    Draw     */
/* *********** */
.leaflet-drawing-icon,
.leaflet-editable-drawing {
    cursor: crosshair;
}

.umap-toolbar a,
.umap-toolbar a:hover {
    height: var(--control-size);
    width: var(--control-size);
    display: none;
    margin-top: 0;
    vertical-align: top;
    border-bottom: none;
    background-color: var(--color-darkGray);
    background-repeat: no-repeat;
    background-image: url('./img/24.svg');
    background-size: auto auto;
}

.umap-toolbar {
    margin-top: 0;
}

.umap-edit-enabled .umap-toolbar a {
    display: block;
}

.leaflet-middle-icon,
.leaflet-vertex-icon {
    border-radius: 50%;
}

/* ********************************* */
/*   Third party plugin override     */
/* ********************************* */

.leaflet-control-edit-in-osm .leaflet-control-edit-in-osm-toggle {
    background-image: url('img/24.svg');
    background-position: -108px -108px;
}

.leaflet-measure-control,
.leaflet-control-edit-in-osm {
    border: 1px solid #bbb;
    border-radius: 4px;
    box-shadow: none;
    background-color: white;
}

.leaflet-measure-control a {
    background-position: 0 -72px;
}

.leaflet-control .leaflet-measure-toggle {
    display: inline-block;
    vertical-align: middle;
}



/* ********************************* */
/*     Help Lightbox                 */
/* ********************************* */
.umap-help-button[type="button"] {
    display: inline-block;
    width: 16px;
    height: 16px;
    margin-inline-start: 2px;
    background-position: 2px -4px;
    background-repeat: no-repeat;
    background-image: url('./img/16.svg');
    background-color: transparent !important;
    vertical-align: middle;
    text-indent: -9999px;
    min-height: inherit;
    padding-top: 5px;
    border: none !important;
}

.dark .umap-help-button {
    background-image: url('./img/16-white.svg');
}

.umap-help-entry+.umap-help-entry {
    margin-top: 10px;
    border-top: 1px solid #aaa;
    padding-top: 10px;
}

.umap-getstarted button {
    width: 100%;
    margin-bottom: var(--text-margin);
}

.umap-help-links li {
    margin-bottom: var(--text-margin);
}

.umap-help {
    font-style: italic;
}

.leaflet-toolbar-tip {
    background-color: var(--color-darkGray);
}

.layer-toggle {
    background-position: -49px -31px;
}

.off .layer-toggle {
    background-position: -73px -31px;
}

.feature-delete,
.layer-delete {
    background-position: -122px -49px;
}

.feature-edit,
.layer-edit {
    background-position: -50px -49px;
}

.readonly .layer-edit,
.off .layer-edit {
    background-position: -50px -73px;
}

.readonly .layer-delete,
.off .layer-delete {
    background-position: -122px -121px;
}

.show-on-edit {
    display: none !important;
}

.umap-edit-enabled .show-on-edit {
    display: inline-block !important;
}

.umap-edit-enabled .show-on-edit.inline {
    display: inline !important;
}

.umap-edit-enabled .show-on-edit.block {
    display: block !important;
}

.umap-edit-enabled .hide-on-edit {
    display: none !important;
}

/* ********************************* */
/*   Browser panel          */
/* ********************************* */

.leaflet-inplace-toolbar a {
    background-repeat: no-repeat;
    background-image: url('./img/16.svg');
    display: inline;
    padding: 0 10px;
    cursor: pointer;
    height: 24px;
    line-height: 24px;
    vertical-align: middle;
}
/* ... */

